examples/pass/S-F.stl
/** FenceElim **/ 
global x; 
local l; 

/** Optimised **/ 
fenceSC; 

/** Unoptimised **/ 
