examples/fail/WymRxlF-RxlFWym.stl
/** reordRscW **/
global x, y; 
local l, m; 

/** Optimised **/ 
read(x,l); 
fenceSC; 
write(y,m); 

/** Unoptimised **/ 
write(y,m); 
read(x,l); 
fenceSC; 


